fix duplicate domains appearing in Assets after moving a data product to a different domain